# LizkVision

./: CMakeLists.txt  LICENSE  arrow.cpp  arrow.h  diagramitem.cpp  diagramitem.h  diagramscene.cpp  diagramscene.h  imagemanager.cpp  imagemanager.h  images.qrc  m_algroithmfun.cpp  m_algroithmfun.h  m_diagram.cpp  m_diagram.h  m_graphicsTextitem.cpp  m_graphicsTextitem.h  m_graphicsview.cpp  m_graphicsview.h  m_itemmanager.cpp  m_itemmanager.h  m_process.cpp  m_process.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  operatorwidget.cpp  operatorwidget.h  operatorwidget.ui  ui_mainwindow.h  ui_operatorwidget.h
build-LizkVision-Desktop_Qt_6_2_4_MSVC2019_64bit-Debug/: CMakeCache.txt.prev  build.ninja  cmake_install.cmake
